--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>repl.it</title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
-	<link href="style.css" rel="stylesheet" type="text/css" />
+	<title>Willie's Portfolio</title>
 </head>
 
 <body>
