--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </main>
   <br>
 	<footer>
-		<p>Contact Information</p>
+		<h3>Contact Information</h3>
 		<p>LinkedIn: <a href="www.linkedin.com/in/
 willieparker">LinkedIn Profile</a>
     </p>
