--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Willie's Portfolio</title>
+	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
