--- a/index.html
+++ b/index.html
@@ -18,13 +18,24 @@
 	</header>
 
 	<main>
+  <hr>
 			<p>Hi! I'm Willie, a current aspiring Software Engineer within the Thinkful program from Baltimore, MD. </p>
-
+<hr>
 		</article>
 			<h2>About Me</h2>
 			<p>I joined the program looking to upskill and continue my journey into my huge career change! Being a current Cloud Computing graduate, as well as a current Educator, I don't neccesarily have to traditional technology background to break into the industry. Utilizing the program will allow me to learn extensive skillsets that will aid in progressing my abilities that I will be able to bring to any company.</p>
 
-      <p>Outside of my goal of completing my career change, I like to enjoy my other free time doing fun activities. The fun activities include watching sporting events, regularly going to the gym, and daily fun with the family! </p>
+      <p>Outside of my goal of completing my career change, I like to enjoy my other free time doing fun activities. The fun activities include:
+<ol>
+  <ul>
+<li>Watching sporting events</li>
+<li>Regularly going to the gym</li>
+<li>Daily fun with the family</li>
+  </ul>
+</ol>
+  </p>
+<hr>
+ <img src="cloudComputingPicture.jpg" alt="The Cloud" width="500" height="600"> 
 		</article>
     </main>
   <br>
