--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </ol>
   </p>
 <hr>
- <img src="/cloudComputingPicture.jpg" alt="The Cloud" width="500" height="600"> 
+ <img src="/cloudComputingPicture.jpg" alt="The Cloud" width="100%" height="600"> 
 		</article>
     </main>
   <br>
