--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Willie's Portfolio</title>
-	<link href="style.css" rel="stylesheet" type="text/css" />
+	<link href="style.css" rel="stylesheet" type="text/css" >
 </head>
 
 <body>
@@ -20,11 +20,9 @@
 	<main>
        <article>
   <hr>
+	       <h2>About Me</h2>
 			<p>Hi! I'm Willie, a current aspiring Software Engineer within the Thinkful program from Baltimore, MD. </p>
-<hr>
-	</article>
-       <article>
-			<h2>About Me</h2>
+			
 			<p>I joined the program looking to upskill and continue my journey into my huge career change! Being a current Cloud Computing graduate, as well as a current Educator, I don't neccesarily have to traditional technology background to break into the industry. Utilizing the program will allow me to learn extensive skillsets that will aid in progressing my abilities that I will be able to bring to any company.</p>
 
       <p>Outside of my goal of completing my career change, I like to enjoy my other free time doing fun activities. The fun activities include:</p>
@@ -41,8 +39,7 @@
   <br>
 	<footer>
 		<h3>Contact Information</h3>
-		<p>LinkedIn: <a href="www.linkedin.com/in/
-willieparker">LinkedIn Profile</a>
+		<p>LinkedIn: <a href="www.linkedin.com/in/willieparker">LinkedIn Profile</a>
     </p>
     <p>GitHub: <a href="https://github.com/Willie3p3">GitHub Profile</a>
     </p>
