--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 			<p>I joined the program looking to upskill and continue my journey into my huge career change! Being a current Cloud Computing graduate, as well as a current Educator, I don't neccesarily have to traditional technology background to break into the industry. Utilizing the program will allow me to learn extensive skillsets that will aid in progressing my abilities that I will be able to bring to any company.</p>
 
       <p>Outside of my goal of completing my career change, I like to enjoy my other free time doing fun activities. The fun activities include:</p>
-  <ul>
+  <ol>
 <li>Watching sporting events</li>
 <li>Regularly going to the gym</li>
 <li>Daily fun with the family</li>
-  </ul>
+  </ol>
 
 		</article>
 <hr>
@@ -39,12 +39,12 @@
   <br>
 	<footer>
 		<h3>Contact Information</h3>
-		<ol>
-		<p>LinkedIn: <a href="www.linkedin.com/in/willieparker">LinkedIn Profile</a>
-    </p>
-    <p>GitHub: <a href="https://github.com/Willie3p3">GitHub Profile</a>
-    </p>
-			</ol>
+		<ul>
+	<li>LinkedIn: <a href="www.linkedin.com/in/willieparker">LinkedIn Profile</li>
+    </li>
+    <li>GitHub: <a href="https://github.com/Willie3p3">GitHub Profile</a>
+    </li>
+			</ul>
 <br>
 </footer>
 
