--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
 		<h3>Contact Information</h3>
 		<ul>
 	<li>LinkedIn: <a href="www.linkedin.com/in/willieparker">LinkedIn Profile</li>
-    </li>
-    <li>GitHub: <a href="https://github.com/Willie3p3">GitHub Profile</a>
-    </li>
+    <li>GitHub: <a href="https://github.com/Willie3p3">GitHub Profile</a></li>
 			</ul>
 <br>
 </footer>
