--- a/index.html
+++ b/index.html
@@ -39,10 +39,8 @@
   <br>
 	<footer>
 		<h3>Contact Information</h3>
-<ol>
-<li> LinkedIn: <a href="www.linkedin.com/in/willieparker">LinkedIn Profile </li>
-<li> GitHub: <a href="https://github.com/Willie3p3">GitHub Profile </li>
-</ol>
+<p> LinkedIn: <a href="www.linkedin.com/in/willieparker">LinkedIn Profile </p>
+<p> GitHub: <a href="https://github.com/Willie3p3">GitHub Profile </p>
 <br>
 </footer>
 
