--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
   <br>
 	<footer>
 		<h3>Contact Information</h3>
-<p> LinkedIn: <a href="www.linkedin.com/in/willieparker">LinkedIn Profile </p>
-<p> GitHub: <a href="https://github.com/Willie3p3">GitHub Profile </p>
+		<ol>
+<li> LinkedIn: <a href="www.linkedin.com/in/willieparker">LinkedIn Profile</a> </li>
+<li> GitHub: <a href="https://github.com/Willie3p3">GitHub Profile</a> </li>
+		</ol>
 <br>
 </footer>
 
