--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
 	<main>
        <article>
   <hr>
+         <h3>Hi! I'm Willie Parker</h3>
+         <p>A current aspiring Software Engineer within the Thinkful program from Baltimore, MD.</p>
+         <p>I joined the program looking to upskill and continue my journey into my huge career change! Being a current Cloud Computing graduate, as well as a current Educator, I don't neccesarily have to traditional technology background to break into the industry. Utilizing the program will allow me to learn extensive skillsets that will aid in progressing my abilities that I will be able to bring to any company.</p>
+         
 	       <h2>About Me</h2>
-			<p>Hi! I'm Willie, a current aspiring Software Engineer within the Thinkful program from Baltimore, MD. </p>
-			
-			<p>I joined the program looking to upskill and continue my journey into my huge career change! Being a current Cloud Computing graduate, as well as a current Educator, I don't neccesarily have to traditional technology background to break into the industry. Utilizing the program will allow me to learn extensive skillsets that will aid in progressing my abilities that I will be able to bring to any company.</p>
 
       <p>Outside of my goal of completing my career change, I like to enjoy my other free time doing fun activities. The fun activities include:</p>
   <ul>
