--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<footer>
 		<h3>Contact Information</h3>
 		<ol>
-<li> LinkedIn: <a href="www.linkedin.com/in/willieparker">LinkedIn Profile</a> </li>
+<li> LinkedIn: <a href="https://linkedin.com/in/willieparker">LinkedIn Profile</a> </li>
 <li> GitHub: <a href="https://github.com/Willie3p3">GitHub Profile</a> </li>
 		</ol>
 <br>
