--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	       <h2>About Me</h2>
 
       <p>Outside of my goal of completing my career change, I like to enjoy my other free time doing fun activities. The fun activities include:</p>
-  <ul>
+  <ul>  /* information in unordered list */
 <li>Watching sporting events</li>
 <li>Regularly going to the gym</li>
 <li>Daily fun with the family</li>
@@ -35,14 +35,14 @@
 
 		</article>
 <hr>
- <img src="cloudComputingPicture.jpg" alt="The Cloud" height="600"> 
+ <img src="cloudComputingPicture.jpg" alt="The Cloud" height="600">  /* image representing the career path intended */
     </main>
   <br>
 	<footer>
 		<h3>Contact Information</h3>
 		<ol>
-<li> LinkedIn: <a href="https://linkedin.com/in/willieparker">LinkedIn Profile</a> </li>
-<li> GitHub: <a href="https://github.com/Willie3p3">GitHub Profile</a> </li>
+<li> LinkedIn: <a href="https://linkedin.com/in/willieparker">LinkedIn Profile</a> </li>  /* personal social accounts utilized to portray skillsets */
+<li> GitHub: <a href="https://github.com/Willie3p3">GitHub Profile</a> </li>      /* links turn green when visited and red when hovering */
 		</ol>
 <br>
 </footer>
